9. Background Sync - Result

--- a/add_techno.html
+++ b/add_techno.html
@@ -27,5 +27,8 @@
           </div>
 ​
           <script src="add_techno.js"></script>
+          <script src="idb/database.js"></script>
+          <script src="idb/idb.js"></script>
+
         </body>
   </html>
